TreeView config Parking - Sidebar open par défaut - Correction collapse pour permettre sidebar open par défaut - Correction code de la page pour que le Treeview s'affiche correctement dans la sidebar - Gestion de la sélection des plans - Changement de carte à chaque click de plan - Correction de la carte pour vider _inst à chaque unMount

--- a/app/assets/css/_global.styl
+++ b/app/assets/css/_global.styl
@@ -376,3 +376,12 @@ fait toute la largeur du bloc de sidebar */
   margin-left: 10px;
   margin-right: 5px;
 }
+
+/*
+|--------------------------------------------------------------------------
+| ADMINISTRATION PARKING
+|--------------------------------------------------------------------------
+*/
+.jumbo-selection{
+  padding: 80px !important;
+}
